--- a/inventory.ini
+++ b/inventory.ini
@@ -1,3 +1,12 @@
 [mongodb]
+172.31.34.225
 [catalogue]
+172.31.88.195
 [cart]
+172.31.86.17
+[web]
+44.203.255.19
+[redis]
+172.31.93.12
+[user]
+172.31.83.204
