--- a/roboshop.conf
+++ b/roboshop.conf
@@ -4,11 +4,10 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://catalogue.daws76s.online:8080/; }
-location /api/user/ { proxy_pass http://user.daws76s.online:8080/; }
-location /api/cart/ { proxy_pass http://cart.daws76s.online:8080/; }
-location /api/shipping/ { proxy_pass http://shipping.daws76s.online:8080/; }
-location /api/payment/ { proxy_pass http://payment.daws76s.online:8080/; }
+location /api/catalogue/ { proxy_pass http://172.31.88.195:8080/; }
+location /api/user/ { proxy_pass http://172.31.83.204:8080/; }
+location /api/cart/ { proxy_pass http://172.31.86.17:8080/; }
+
 
 location /health {
   stub_status on;
