--- a/user.service
+++ b/user.service
@@ -3,8 +3,8 @@ Description = User Service
 [Service]
 User=roboshop
 Environment=MONGO=true
-Environment=REDIS_HOST=redis.daws76s.online
-Environment=MONGO_URL="mongodb://mongodb.daws76s.online:27017/users"
+Environment=REDIS_HOST=172.31.93.12
+Environment=MONGO_URL="mongodb:/172.31.34.225:27017/users"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
 
